tests/baselines/reference/constructSignatureWithAccessibilityModifiersOnParameters2.errors.txt
==== tests/cases/compiler/constructSignatureWithAccessibilityModifiersOnParameters2.ts (18 errors) ====
    // Parameter properties are not valid in overloads of constructors
    
    class C {
        constructor(public x, private y);
                    ~~~~~~
!!! error TS1083: Parameter property declarations cannot be used in a constructor overload.
        constructor(public x, private y) { }
                           ~
!!! error TS2000: Duplicate identifier 'x'.
                                      ~
!!! error TS2000: Duplicate identifier 'y'.
    }
    
    class C2 {
        constructor(private x);
                    ~~~~~~~
!!! error TS1083: Parameter property declarations cannot be used in a constructor overload.
        constructor(public x) { }
                           ~
!!! error TS2000: Duplicate identifier 'x'.
    }
    
    class C3 {
        constructor(private x);
                    ~~~~~~~
!!! error TS1083: Parameter property declarations cannot be used in a constructor overload.
        constructor(private y) { }
    }
    
    interface I {
        new (public x);
             ~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
        new (public x);
             ~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
        ~~~~~~~~~~~~~~
!!! error TS2147: Duplicate overload construct signature.
    }
    
    interface I2 {
        new (private x);
             ~~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
        new (private x);
             ~~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
        ~~~~~~~~~~~~~~~
!!! error TS2147: Duplicate overload construct signature.
    }
    
    var a: {
        new (public x);
             ~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
        new (public y);
             ~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
        ~~~~~~~~~~~~~~
!!! error TS2147: Duplicate overload construct signature.
    }
    
    var b: {
        new (private x);
             ~~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
        new (private y);
             ~~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
        ~~~~~~~~~~~~~~~
!!! error TS2147: Duplicate overload construct signature.
    }